# WingGifEditor2

./: .gitmodules  CMakeLists.txt  README.md  favicon.rc  resources.qrc
.github/workflows/: clang-format-check.yml  qt-build-test.yml
lang/: WingGifEditor2_en_US.ts  WingGifEditor2_zh_CN.ts  WingGifEditor2_zh_TW.ts
mkinstaller/AUR/: PKGBUILD
mkinstaller/innoSetup/: mkinnopak.py
mkinstaller/pyscript/: com.wingsummer.winggifeditor2.desktop  installer.py
mkinstaller/share/: com.wingsummer.winggifeditor2.desktop  installer.py
share/: com.wingsummer.winggifeditor2.desktop
src/: define.h  main.cpp  predefgen.h  utilities.h
src/class/: angelscripthelper.h  appmanager.cpp  appmanager.h  asgifimage.cpp  asgifimage.h  clipboardhelper.cpp  clipboardhelper.h  gifcontentmodel.cpp  gifcontentmodel.h  giffile.cpp  giffile.h  gifframe.cpp  gifframe.h  gifreader.cpp  gifreader.h  gifwriter.cpp  gifwriter.h  languagemanager.cpp  languagemanager.h  logger.cpp  picturedelegate.cpp  picturedelegate.h  playgifmanager.cpp  playgifmanager.h  qkeysequences.cpp  qkeysequences.h  qtlockedfile.cpp  qtlockedfile.h  recentfilemanager.cpp  recentfilemanager.h  scriptmachine.cpp  scriptmachine.h  scriptmanager.cpp  scriptmanager.h  setting.h  settingmanager.cpp  settingmanager.h  skinmanager.cpp  waitingloop.cpp  waitingloop.h  (+2 more)
src/command/: cropimagecommand.cpp  cropimagecommand.h  delayframecommand.cpp  delayframecommand.h  delframedircommand.cpp  delframedircommand.h  flipframecommand.cpp  flipframecommand.h  insertframecommand.cpp  insertframecommand.h  moveframecommand.cpp  moveframecommand.h  reduceframecommand.cpp  reduceframecommand.h  removeframecommand.cpp  removeframecommand.h  replaceframecommand.cpp  replaceframecommand.h  reverseframecommand.cpp  reverseframecommand.h  rotateframecommand.cpp  rotateframecommand.h  scaleframecommand.cpp  scaleframecommand.h  undocommand.cpp  undocommand.h
src/control/: aspectratiopixmaplabel.cpp  aspectratiopixmaplabel.h  gifcontentgallery.cpp  gifcontentgallery.h  gifeditor.cpp  gifeditor.h  gifeditorscene.cpp  gifeditorscene.h  toast.cpp
src/control/imagecropper/: imagecropper.cpp  imagecropper.h  imagecropper_e.h  imagecropper_p.h
src/dialog/: aboutsoftwaredialog.cpp  aboutsoftwaredialog.ui  createreversedialog.cpp  createreversedialog.h  cropgifdialog.cpp  cropgifdialog.h  exportdialog.cpp  exportdialog.h  fileinfodialog.cpp  fileinfodialog.h  framelessdialogbase.cpp  framelessdialogbase.h  framelessmainwindow.cpp  gifsavedialog.cpp  gifsavedialog.h  logdialog.cpp  logdialog.h  mainwindow.cpp  mainwindow.h  newdialog.cpp  newdialog.h  reduceframedialog.cpp  reduceframedialog.h  scalegifdialog.cpp  scalegifdialog.h
src/plugin/: iwingplugin.h  pluginsystem.cpp  pluginsystem.h
src/scriptaddon/: qtgeometrybinding.cpp  qtgeometrybinding.h  scriptcolor.cpp  scriptjson.h  scriptoptbox.cpp  scriptqdictionary.cpp  scriptqstring.cpp  scriptqstring.h  scriptrunable.cpp  scriptrunable.h
src/settings/: editorsettingdialog.cpp  editorsettingdialog.h  editorsettingdialog.ui  pluginsettingdialog.cpp  pluginsettingdialog.h  pluginsettingdialog.ui
theme/: breeze.qrc
theme/dark/: stylesheet.qss
theme/light/: stylesheet.qss
